Add deno check to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,5 +24,8 @@ jobs:
       - name: Format check
         run: deno fmt --check
 
+      - name: Type check
+        run: deno check --all mod.ts
+
       - name: Test
         run: deno test -A
