--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,19 +13,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Deno
-        uses: denoland/setup-deno@v1
-        with:
-          deno-version: v2.5.2
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@v13
+
+      - name: Configure Nix cache
+        uses: DeterminateSystems/magic-nix-cache-action@v4
 
       - name: Lint
-        run: deno lint
+        run: nix develop --command deno lint
 
       - name: Format check
-        run: deno fmt --check
+        run: nix develop --command deno fmt --check
 
       - name: Type check
-        run: deno check --all mod.ts
+        run: nix develop --command deno check --all mod.ts
 
       - name: Test
-        run: deno test -A
+        run: nix develop --command deno test -A
