--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -38,15 +38,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Deno
-        uses: denoland/setup-deno@v1
-        with:
-          deno-version: v2.5.2
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@v13
+
+      - name: Configure Nix cache
+        uses: DeterminateSystems/magic-nix-cache-action@v4
+
+      - name: Register Deno problem matcher
+        run: echo '::add-matcher::.github/deno-problem-matcher.json'
 
       - name: Compile
         run: |
           mkdir -p dist
-          deno compile -A --target ${{ matrix.target }} --output dist/gambit${{ matrix.ext }} src/cli.ts
+          nix develop --command deno compile -A --target ${{ matrix.target }} --output dist/gambit${{ matrix.ext }} src/cli.ts
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
