--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,10 @@
   "name": "@bolt-foundry/gambit",
   "version": "0.1.0",
   "license": "Apache-2.0",
-  "exports": "./mod.ts",
+  "exports": {
+    ".": "./mod.ts",
+    "./cli": "./src/cli.ts"
+  },
   "tasks": {
     "fmt": "deno fmt",
     "lint": "deno lint",
