--- a/deno.jsonc
+++ b/deno.jsonc
@@ -74,6 +74,7 @@
     "zod": "npm:zod@^3.23.8",
     "zod-to-json-schema": "npm:zod-to-json-schema@^3.23.0",
     "@openai/openai": "npm:openai@^4.78.1",
+    "@google/generative-ai": "npm:@google/generative-ai@^0.15.0",
     "react": "npm:react@^19.2.0",
     "react-dom": "npm:react-dom@^19.2.0"
   },
